--- a/templates/KITS/base.html
+++ b/templates/KITS/base.html
@@ -10,8 +10,8 @@
 
   <!-- Add additional CSS in static file -->
     {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}">
 
     <!-- Add Bootstrap JS plugins for certain CSS components -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
@@ -22,12 +22,13 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 5px;">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="{% url 'KITS:home' %}">
-      <img src="{% static '' %}" alt="" width="30" height="30" class="d-inline-block align-self-center"> <!-- LOGO HERE -->
-      KITS (NEED LOGO)
+      <img src="{% static 'images/box_icon.png' %}" alt="" width="30" height="30" class="d-inline-block align-self-center">
+      KITS
     </a>
     <div class="collapse navbar-collapse justify-content-center" id="navbarText">
       <div class="navbar-nav mb-2 mb-lg-0">
