--- a/templates/KITS/report_userstudies.html
+++ b/templates/KITS/report_userstudies.html
@@ -3,162 +3,104 @@
 {% extends 'KITS/base.html' %}
 {% block content %}
     <style>
-    .box {
-    margin: 8px;
-    border: 1px solid silver;
-    padding: 8px;
-    border-radius: 4px;
-}
+    .column12 {
+        float: left;
+        margin: 8px;
+        width: 25%;
+    }
 
+    .column3 {
+        float: left;
+        margin: 0;
+        width: 46%;
+    }
+
+/* Clear floats after the columns */
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
     </style>
-    <h2> Study from {{ startdate }} to {{ enddate }}</h2>
 
-        <div class="row">
-        <div class="column12" style="background-color:#aaa; margin-left: 12px;">
-        <h2>Studies Created</h2>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-danger" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
-
-            <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <tr class="bg-info">
-                    <th>#</th>
-                    <th>IRB</th>
-                    <th>Name</th>
-
-
-                </tr>
-                </thead>
-                <tbody>
-                {% for instances in queryset %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ instances.IRB_number }}</td>
-                    <td>{{ instances.pet_name }}</td>
-                    <td>{{ instances.history_user_id }}</td>
-
-                </tr>
-                {% endfor %}
-
-                </tbody>
-            </table>
-        </div>
-
-        <div class="column12" style="background-color:#bbb;">
-        <h2>Least Active Studies</h2>
-
-             <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <tr class="bg-info">
-                    <th>IRB</th>
-                    <th>Name</th>
-                    <th>Kits Checked Out</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                {% for instances in queryset %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ instances.IRB_number }}</td>
-                    <td>{{ instances.pet_name }}</td>
-                    <td>{{ instances.history_user_id }}</td>
-
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-        <div class="column3" style="background-color:#ccc;">
-            {{ graph|safe }}
-        </div>
-
-
-
-
-        </div>
-
-        <div class="box">
-        <H2>Study Status Activity - {{ user.get_username }}</H2>
+    <div class="container-fluid">
+        <H2>Reports - User Activity For {{ user }}</H2>
         <hr>
-        <p><b style="font-size: 1.4em;">Studies Created</b></p>
-        <p><b style="font-size: 1.2em;">Studies Opened (2nd col)</b></p>
-        <p><b style="font-size: 1.2em;">Studies Archived(3rd col)</b></p>
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-            <tr class="bg-info">
-                <th>#</th>
-                <th>IRB Number</th>
-                <th>Pet Name</th>
-                <th>User ID</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for instances in queryset %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ instances.IRB_number }}</td>
-                <td>{{ instances.pet_name }}</td>
-                 <td>{{ instances.history_user_id }}</td>
 
-            </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+        <form method="POST">
+        {% csrf_token %}
+        <h6>Filter by date range (MM-DD-YYYY):</h6>
+        <span>From: </span><input type="text" name="startdate">
+        <span>To: </span><input type="text" name="enddate">
+
+        <button class="btn btn-primary" type="submit">Search</button>
+        </form>
+
+        <hr>
+        <p> Studies Created and Modified For The User</p>
+        <hr>
 
         <div class="row">
-        <div class="column12" style="background-color:#aaa; margin-left: 12px;">
-        <h2>Most Active Studies</h2>
+            <div class="column12" style="margin-left: 12px;">
+                <h3>Studies Created</h3>
 
+                <table class="table table-striped table-bordered table-hover table-secondary">
+                    <thead>
+                        <tr class="bg-info">
+                            <th>#</th>
+                            <th>IRB</th>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for instances in queryset %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ instances.IRB_number }}</td>
+                                 <td>{{ instances.pet_name }}</td>
+                                <td>{{ instances.history_user_id }}</td>
+                             </tr>
+                         {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-            <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <tr class="bg-info">
-                    <th>IRB</th>
-                    <th>Name</th>
-                    <th>Kits Checked Out</th>
+            <div class="column12">
+                <h3>Studies Changed</h3>
 
-                </tr>
-                </thead>
-                <tbody>
-                {% for study in active_studies %}
-                    <tr>
-                        {% for s in study %}
-                        <td>{{ s }}</td>
-                        {% endfor %}
-                    </tr>
+                <table class="table table-striped table-bordered table-hover table-secondary">
+                    <thead>
+                        <tr class="bg-info">
+                            <th>#</th>
+                            <th>IRB</th>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                       {% for instances in queryset_changed %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ instances.IRB_number }}</td>
+                                 <td>{{ instances.pet_name }}</td>
+                                <td>{{ instances.history_user_id }}</td>
+                             </tr>
+                         {% endfor %}
+                    </tbody>
+                </table>
+            </div>
 
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-        <div class="column12" style="background-color:#bbb;">
-        <h2>Least Active Studies</h2>
-
-             <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <tr class="bg-info">
-                    <th>IRB</th>
-                    <th>Name</th>
-                    <th>Kits Checked Out</th>
-
-                </tr>
-                </thead>
-                <tbody>
-                {% for study in notactive_studies %}
-                    <tr>
-                        {% for s in study %}
-                        <td>{{ s }}</td>
-                        {% endfor %}
-                    </tr>
-
-                {% endfor %}
-                </tbody>
-            </table>
+            <div class="column3" style="background-color:white;">
+                {{ graph|safe }}
+            </div>
         </div>
     </div>
-
 {% endblock %}
 </html>
