--- a/templates/KITS/study_detail_seeallkits.html
+++ b/templates/KITS/study_detail_seeallkits.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="container-fluid">
-        <H2>Study {{ study.IRB_number }} "{{ study.pet_name }}" > All Kits</H2>
+        <H2>Study {{ study.IRB_number }} "{{ study.pet_name }}" - All Kits</H2>
         <hr>
 
         <table class="table table-striped table-bordered table-hover table-secondary">
